Fix format on mobile, make about me more personal

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -311,6 +311,7 @@ a {
   border-bottom: 4px solid #D65394;
   color: #D65394;
   margin-bottom: 5%;
+  margin-top: 10%;
 }
 
 .plain-txt {
@@ -320,6 +321,7 @@ a {
   font-size: 4rem;
   color: #D65394;
   margin-bottom: 5%;
+  margin-top: 10%;
 }
 
 
@@ -598,12 +600,24 @@ td {
     font-size: 1.8rem;
   }
 
+  .plain-txt {
+    font-size: 1.8rem;
+  }
+
   .proj-description {
     font-size: 1rem;
     padding-top: -5%;
   }
+
+  .VueCarousel-wrapper {
+    height: 20vh;
+  }
+
+  .itunes-pic {
+    height: 20vh;
+  }
   .wrapper {
-    width: 60vw;
+    width: 60%;
   }
 
   .calc-table {
@@ -623,6 +637,21 @@ td {
   // }
 }
 
+.footer-txt {
+  padding: 15px;
+  text-align: center;
+  font-family: $lato;
+  font-size: 1rem;
+}
+
+.link {
+  border-bottom: 1px solid #9e10a3;
+}
+
+.link2 {
+  color: #9cc0f0;
+  border-bottom: 2.5px solid #9cc0f0;
+}
 @media (max-width: 830px) {
   .title {
     font-size: 4.5rem;
